# Mitra

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SUPPORT.md  credits.txt  workflow.md
.github/: PULL_REQUEST_TEMPLATE.md  support.md
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility_issue.yml  config.yml  docs_request.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
mitra-cli/: Cargo.toml
mitra-cli/src/: cli.rs  handlers.rs  main.rs
mitra-core/: Cargo.toml
mitra-core/src/: lib.rs  logic.rs  utils.rs
mitra-gui/: Cargo.toml
mitra-gui/src/: main.rs
src/: cli.rs  events.rs  handlers.rs  main.rs  utils.rs
src/data/: events.json
