#  * Cargo.toml
#  * Copyright (C) Mohammad (Sina) Jalalvandi (parsidate) 2024-2025 <jalalvandi.sina@gmail.com>
#  * Sign: mitra-20250413-807aa3a3c537-3ea6e1ecf4d95369d274d372595c8d3b

[package]
name = "mitra"
version = "2.2.1"
edition = "2024"
description = "A versatile command-line interface (CLI) tool for working with Persian (Jalali/Shamsi) dates and times, built upon the robust parsidate"
license = "Apache-2.0"
authors = ["Sina Jalalvandi <Jalalvandi.Sina@gmail.com>"] 
readme = "README.md"
repository = "https://github.com/jalalvandi/mitra"

[dependencies]
parsidate = "1.4.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
